@@ -1,3 +1,0 @@
-MD5 23acda5be4785f821b58b0e04da8f918 mindterm_2.4.2-src.zip 878872
-RMD160 6fbb8f25d3d34f1e0bf4494b6f5aa58cce2f6542 mindterm_2.4.2-src.zip 878872
-SHA256 e2856d402ed4f2f81253e8b10febe96926a303deaaae88d6e4ba65ebabc4c65a mindterm_2.4.2-src.zip 878872
